caps limits and config finishing

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>MadfoaatcomWallet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/images/madIcon.svg">
   <link href="assets/cork/assets/css/loader.css" rel="stylesheet" type="text/css" />
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
@@ -30,6 +30,8 @@
   <link rel="stylesheet" href="assets/cork/plugins/font-icons/fontawesome/css/fontawesome.css">
   <link href="assets/cork/assets/css/elements/custom-pagination.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" type="text/css" href="assets/cork/plugins/select2/select2.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/cork/assets/css/components/custom-modal.css">
+  
   <!-- END PAGE LEVEL PLUGINS/CUSTOM STYLES -->
 </head>
 
